spacing for displays fixed

--- a/Time_Checker/flask_imp/static/style.css
+++ b/Time_Checker/flask_imp/static/style.css
@@ -159,7 +159,6 @@ button {
     border-radius: 10px;
 }
 .blocks {
-    padding-inline: 2%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 25px;
     width: 25%;
@@ -174,6 +173,7 @@ button {
 .box_container {
     align-items: center;
     justify-content: center;
+    flex: 1;
 }
 .blocks:hover {
     transform: scale(1.04);
